@@ -1,18 +1,19 @@
 package com.admeliora.briefbot.user.api;
 
-import com.admeliora.briefbot.user.api.doc.GetAllUsersOperation;
 import com.admeliora.briefbot.user.api.dto.UserDto;
 import com.admeliora.briefbot.user.domain.User;
 import com.admeliora.briefbot.user.service.UserService;
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("users")
@@ -21,17 +22,25 @@ import java.util.stream.Collectors;
 public class UserController {
 
     private final UserService userService;
-    private final UserMapper userMapper;
 
     @GetMapping
-    @GetAllUsersOperation
-    public ResponseEntity<List<UserDto>> getAllUsers() {
-
+    @Operation(
+            summary = "Get all users",
+            description = "Retrieves a list of all registered users.",
+            operationId = "getAllUsers"
+    )
+    public List<UserDto> getAllUsers() {
         List<User> users = userService.getAllUsers();
-        List<UserDto> userDtos = users.stream()
-                .map(userMapper::toDto)
-                .collect(Collectors.toList());
+        return users.stream()
+                .map(UserDto::from)
+                .toList();
+    }
 
-        return ResponseEntity.ok(userDtos);
+    @GetMapping("/me")
+    public ResponseEntity<UserDto> me(@AuthenticationPrincipal OidcUser user) {
+        return userService.getLoggedUser(user)
+                .map(UserDto::from)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 }
